Make `static final Map` constants immutable